version 1.05, 2003-09-18:
=========================
* add module Printer (from a suggestion of Stefano Zacchiroli)
* add lmake in Date, Date.Period, Time, Time.Period, Calendar, Calendar.Period
* Calendar.equal is faster

version 1.04, 2003-08-31:
=========================
* add getters in Time.Period, Date.Period and Calendar.Period
	(from a suggestion of Christoph Bauer)

version 1.03, 2003-08-25:
=========================
* add "to_time" in Calendar (Julien Forest's suggestion)

version 1.02, 2003-08-18:
=========================
* bug fixed in configure.in (calendar now works with caml version > 3.06)

version 1.01, 2003-07-16:
=========================
* change "minut" by "minute"
* change "egal" by "equal"
* change "GMT" by "UTC"
* add to_unixtm, from_unixtm, to_unixfloat and from_unixfloat in 
	Date and Calendar

(Thank's to Eric C. Cooper for those suggestions)

version 1.0, 2003-07-11: 
========================
* first release